--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
     padding-right: 20px;
     padding-left: 20px;
     justify-content: start;
+    margin: 0;
 }
 
 .price-img {
@@ -88,5 +89,22 @@ body {
 
 .avatar {
     border: 1px green solid;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    padding-right: 20px;
+    padding-left: 20px;
+    justify-content: start;
+    margin: 0;
+}
 
+.avatar-img img {
+    width: 25%;
+    padding-top: 14px;
+    }
+
+.avatar-text p {
+    font-family: Outfit, sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    color: hsl(215, 51%, 70%);
 }
