--- a/style.css
+++ b/style.css
@@ -10,8 +10,15 @@ body {
     background-color: hsl(217, 54%, 11%);
     }
 
-/* .attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); } */
+.wrapper {
+    background-color: hsl(216, 50%, 16%);
+    border-radius: 15px;
+    border: 1px rgb(190, 231, 9) solid;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
 
 .container {
     max-width: 375px; /*Посмотреть результат на 350px*/
@@ -19,27 +26,49 @@ body {
     margin-top: 50px;
     margin-right: auto;
     margin-left: auto;
-    border-radius: 15px;
-       
 }
 
-.image img {
-    height: auto;
-    width: 335px; /*Ширина определена 375 ширина моб.изобр - 40px отступы*/
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    padding-left: 20px;
-    border-radius: 30px;
-    }
+.image-top {
+    border-radius: 15px;
+    overflow: hidden;
+    position: relative;
+}
+
+.image-top img {
+    width: 100%; 
+    display: block;
+}
+
+.image-hiden {
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    bottom: 0; 
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: hsla(178, 100%, 50%, 0.3);
+    display: none;
+}
+
+.image-hiden img {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    top: 0; 
+    left: 0; 
+    bottom: 0; 
+    right: 0;
+}
+
+.image-hiden:hover {
+    display: block;
+}
 
 .content {
     border: 1px green solid;
-    padding-top: 0px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    padding-left: 20px;
-    }
+        }
 
 .content h1 {
     font-family: Outfit, sans-serif;
@@ -56,50 +85,29 @@ body {
 }
 
 .price {
-    /* display: grid;
-    grid-template-columns: repeat(4, auto); */
-    padding-right: 20px;
-    padding-left: 20px;
-    justify-content: start;
-    margin: 0;
+    justify-content: start; 
 }
 
 .price-img {
-    /* padding-top: 20px; */
     font-family: Outfit, sans-serif;
     font-weight: 300;
     font-size: 18px;
     color: hsl(178, 100%, 50%);
-    /* padding-left: 8px; */
-
 }
 
-.price-clock {
-    /* padding-top: 21px; */
+.price-clock { 
     font-family: Outfit, sans-serif;
     font-weight: 300;
     font-size: 18px;
     color: hsl(215, 51%, 70%);
 }
 
-.line {
-    border: 1px green solid;
-
-}
-
 .avatar {
     border: 1px green solid;
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    padding-right: 20px;
-    padding-left: 20px;
-    justify-content: start;
-    margin: 0;
-}
+  }
 
 .avatar-img img {
     width: 25%;
-    /* padding-top: 14px; */
     font-family: Outfit, sans-serif;
     font-weight: 300;
     font-size: 18px;
