--- a/style.css
+++ b/style.css
@@ -10,22 +10,25 @@ body {
     background-color: hsl(217, 54%, 11%);
     }
 
-.wrapper {
+.container {
+    max-width: 350px; /*Посмотреть результат на 350px*/
     background-color: hsl(216, 50%, 16%);
+    /* border: 1px rgb(238, 26, 26) solid; */
+    margin-top: 50px;
+    margin-right: auto;
+    margin-left: auto;
     border-radius: 15px;
-    border: 1px rgb(190, 231, 9) solid;
+}
+
+.wrapper {
+    /* background-color: hsl(216, 50%, 16%); */
+    border-radius: 15px;
+    /* border: 1px rgb(190, 231, 9) solid; */
+    padding-top: 20px;
     margin-top: 20px;
     margin-right: 20px;
     margin-bottom: 20px;
     margin-left: 20px;
-}
-
-.container {
-    max-width: 375px; /*Посмотреть результат на 350px*/
-    border: 1px rgb(238, 26, 26) solid;
-    margin-top: 50px;
-    margin-right: auto;
-    margin-left: auto;
 }
 
 .image-top {
@@ -62,54 +65,92 @@ body {
     right: 0;
 }
 
-.image-hiden:hover {
+.image-top:hover .image-hiden {
     display: block;
 }
 
-.content {
-    border: 1px green solid;
-        }
-
 .content h1 {
-    font-family: Outfit, sans-serif;
+    /* font-family: Outfit, sans-serif; */
     font-weight: 600;
     font-size: 24px;
     color: hsl(0, 0%, 100%);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    /* display: inline-block; */
+}
+
+.content h1:hover {
+    color: hsl(178, 100%, 50%);
+
 }
 
 .content p {
-    font-family: Outfit, sans-serif;
+    /* font-family: Outfit, sans-serif; */
     font-weight: 300;
     font-size: 18px;
     color: hsl(215, 51%, 70%);
 }
 
 .price {
-    justify-content: start; 
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
 
 .price-img {
-    font-family: Outfit, sans-serif;
-    font-weight: 300;
-    font-size: 18px;
-    color: hsl(178, 100%, 50%);
+    display: flex;
+    align-items: center;
 }
 
-.price-clock { 
-    font-family: Outfit, sans-serif;
-    font-weight: 300;
-    font-size: 18px;
-    color: hsl(215, 51%, 70%);
+.price-img p {
+    color: hsl(178, 100%, 50%);
+    font-weight: 600;
+    padding-left: 5px;
+}
+
+.price-clock {
+    display: flex;
+    align-items: center;
+}
+
+.price-clock p {
+    padding-left: 5px;
+}
+
+hr {
+    border-color: hsl(215, 32%, 27%);
 }
 
 .avatar {
-    border: 1px green solid;
-  }
-
-.avatar-img img {
-    width: 25%;
-    font-family: Outfit, sans-serif;
-    font-weight: 300;
-    font-size: 18px;
-    color: hsl(215, 51%, 70%);
+    /* border: 1px green solid; */
+    display: flex;
+    align-items: center;
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
+
+.avatar img {
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    border: 1px solid white;
+}
+
+.avatar p {
+    color: hsl(215, 51%, 70%);
+    padding-left: 15px;
+    font-size: 16px;
+}
+
+.name {
+    color: hsl(0, 0%, 100%);
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.name:hover {
+    color: hsl(178, 100%, 50%);
+}
+
